# pretty-tool

./: LICENSE  README.md  pretty.py  pyproject.toml
src/pretty_tool/: __init__.py  __main__.py  formatters.py  pretty.py
