[project]
name = "pretty_tool"
version = "0.1.0"
authors = [
    { name = "Adian Kozlica", email = "kozlicaadian@gmail.com" },
]
description = "A tool to prettify code"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jsbeautifier",
    "cssbeautifier",
    "ruff",
    'BeautifulSoup4',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
