[project]
name = "pretty_tool"
version = "0.1.0"
authors = [
    { name = "Adian Kozlica", email = "kozlicaadian@gmail.com" },
]
description = "A tool to prettify code"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ruff",
    "BeautifulSoup4",
    "clang-format",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
pretty_tool = ["*.json"]

[project.scripts]
pretty-tool = "pretty_tool.pretty:main"